<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">农机宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nongji_location">欢迎使用农机手机助手!</string>
	<string name="input_unicom_number">请输入手机号码</string>
	<string name="input_random">请输入验证码</string>
	<string name="register_free_tip_txt">说明：所有用户均可以注册会员。</string>
	<string name="username">用户名</string>
	<string name="input_username">请输入用户名</string>
	<string name="password">用户密码</string>
	<string name="passwordagain">确认密码</string>
	<string name="input_password">请输入密码</string>
	<string name="oldpass">旧密码</string>
	<string name="platenumber"> 车牌</string>
	<string name="zhongzhimianji">种植面积</string>
	<string name="input_platenumber">请输入车牌</string>
	<string-array name="spinnername">
        <item>5公里</item>
        <item>10公里</item>
        <item>15公里</item>
        <item>20公里</item>
        <item>30公里</item>
        <item>30公里以外</item>
    </string-array>
    <string-array name="spnongjizhuangtai">
        <item>所有</item>
        <item>闲置</item>
        <item>忙碌</item>
        <item>故障</item>
    </string-array>
    <string-array name="spnonghuzhuangtai">
        <item>所有</item>
        <item>有需求</item>
        <item>无需求</item>
    </string-array>
</resources>
