<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_white" >

    <RelativeLayout
        android:id="@+id/title_video_list"
        style="@style/title_layout" >

        <Button
            android:id="@+id/btn_back"
            style="@style/style_btn_back" />

        <TextView
            android:id="@+id/text_title"
            style="@style/title_txt"
            android:text="用户信息修改" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_video_list" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12.0dip"
                android:background="@drawable/login_input_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50.0dip"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:gravity="center"
                        android:text="@string/username" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/input_username"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:textSize="16.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginRight="12.0dip"
                    android:background="@drawable/input_split" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50.0dip"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:gravity="center"
                        android:text="@string/oldpass" />

                    <EditText
                        android:id="@+id/oldpass"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:background="@null"
                        android:hint="@string/input_password"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:textSize="16.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginRight="12.0dip"
                    android:background="@drawable/input_split" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50.0dip"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:gravity="center"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:textSize="16.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginRight="12.0dip"
                    android:background="@drawable/input_split" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50.0dip"
                        android:layout_marginLeft="4dip"
                        android:layout_marginRight="4dip"
                        android:gravity="center"
                        android:text="@string/passwordagain" />

                    <EditText
                        android:id="@+id/okpass"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:textSize="16.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginRight="12.0dip"
                    android:background="@drawable/input_split" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12.0dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/register_free"
                    android:layout_width="220.0dip"
                    android:layout_height="50.0dip"
                    android:layout_gravity="left"
                    android:layout_marginRight="6.0dip"
                    android:background="@drawable/button_"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="20.0dip"
                    android:text="提   交"
                    android:textColor="@color/text_content_white"
                    android:textSize="18.0sp" />

                <Button
                    android:id="@+id/btn_consel"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_gravity="left"
                    android:layout_marginLeft="6.0dip"
                    android:background="@drawable/button_"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="20.0dip"
                    android:text="返    回"
                    android:textColor="@color/text_content_white"
                    android:textSize="18.0sp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/reg_vip_tip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:padding="5.0dip"
                android:text="@string/register_free_tip_txt"
                android:textColor="@color/black"
                android:textSize="14.0sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>